# bd_tools

./: CLAUDE.md
doc_eval/: CLAUDE.md  README.md  USAGE.md  pyproject.toml
doc_eval/examples/: comprehensive_criteria.json  sample_document.txt  simple_criteria.csv
doc_eval/src/doc_eval/: __init__.py  cli.py  client.py  server.py
