[project]
name = "doc-eval"
version = "0.1.0"
description = "Advanced AI-powered document evaluation system with MCP integration"
readme = "README.md"
authors = [
    { name = "CannonJunior", email = "chris.cannon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.1",
    "ollama>=0.5.1",
    "pypdf>=5.6.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
doc-eval = "doc_eval.cli:app"
doc-eval-server = "doc_eval.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
